# megatron-learning

./: README.md
Megatron-CPP-Edu/: CMakeLists.txt  README.md  debug_embedding  debug_embedding.cpp  debug_gpt.cpp  debug_gpt_detailed.cpp  debug_tensor_test.cpp  gpt_model.cpp  gpt_model.h  simple_gpt_test.cpp  test_index_issue.cpp
Megatron-CPP-Edu-notes/: Debug_Log_Phase1.md  Phase1_Tensor_Implementation.md  Phase2_Neural_Network_Layers.md  Phase3_Advanced_Operations.md  Phase4_Model_Integration.md
Megatron-CPP-Edu/core/: CMakeLists.txt
Megatron-CPP-Edu/core/data/: dataset.cpp  dataset.h
Megatron-CPP-Edu/core/evaluation/: metrics.cpp  metrics.h
Megatron-CPP-Edu/core/layers/: attention.cpp  attention.h  dropout.cpp  dropout.h  embedding.cpp  embedding.h  layer.cpp  layer.h  layer_norm.cpp  layer_norm.h  linear.cpp  linear.h  transformer_block.cpp  transformer_block.h
Megatron-CPP-Edu/core/loss/: cross_entropy_loss.cpp  cross_entropy_loss.h  loss.h
Megatron-CPP-Edu/core/optimizers/: adamw.cpp  adamw.h  optimizer.cpp  optimizer.h  sgd.cpp  sgd.h
Megatron-CPP-Edu/core/parallel/: CMakeLists.txt  data_parallel.h  tensor_parallel.cpp  tensor_parallel.h
Megatron-CPP-Edu/core/performance/: performance.cpp  performance.h
Megatron-CPP-Edu/core/tensor/: tensor.cpp  tensor.h
Megatron-CPP-Edu/core/training/: trainer.cpp  trainer.h
Megatron-CPP-Edu/distributed/: CMakeLists.txt  communication.cpp  communication.h
Megatron-CPP-Edu/docs/: api_documentation.md  deployment_guide.md  parallel_computing_guide.md  parallel_computing_tutorial.md
Megatron-CPP-Edu/examples/: CMakeLists.txt  parallel_computing_examples.cpp  performance_benchmark.cpp  real_world_applications.cpp
Megatron-CPP-Edu/models/: CMakeLists.txt
Megatron-CPP-Edu/models/gpt/: CMakeLists.txt  empty.cpp  gpt_model.cpp
Megatron-CPP-Edu/models/transformer/: CMakeLists.txt  transformer_classifier.cpp  transformer_classifier.h
Megatron-CPP-Edu/tests/: CMakeLists.txt  test_layers.cpp  test_parallel.cpp  test_phase3.cpp  test_phase4.cpp  test_tensor.cpp  test_tensor_main  test_tensor_main.cpp
Megatron-CPP-Edu/training/: CMakeLists.txt
notes/: 01_Megatron-LM技术架构分析.md  02_Megatron-LM核心功能实现原理详解.md  03_Megatron-LM关键问题解决方案与优化方法.md  04_LLM架构师面试题与答案-基础篇.md  05_LLM架构师面试题与答案-深度篇.md  06_Megatron-LM_CPP教育版本实现计划.md
